--- a/src/apps/views/partials/header.hbs
+++ b/src/apps/views/partials/header.hbs
@@ -15,7 +15,7 @@
 <!--**********************************
             Nav header end
         ***********************************-->
-<div class="header">
+<div class="header" style="background-color:#183153">
     <div class="header-content clearfix">
         <div class="nav-control">
             <div class="hamburger">
