--- a/src/apps/views/partials/tabla.hbs
+++ b/src/apps/views/partials/tabla.hbs
@@ -1,6 +1,6 @@
 {{#with tabla}}
 <div class="table-responsive">
-    <table class="table table-striped table-bordered zero-configuration">
+    <table class="table  table-bordered zero-configuration">
         <thead>
             <tr>
                 {{#each headers}}
@@ -50,17 +50,17 @@
                 {{/ifHBS}}
                 {{/ifHBS}}
                 {{/each}}
-                <td>
+                <td style="width:2%">
                     <button id="edit" data-url="{{../editUrl}}{{valFromObjkey row ../idEdit}}" data-toggle="modal"
-                        data-target=".add-user" type="submit" class="badge bg-success">
-                        <i class="fa  fa-pencil m-r-5"></i>
+                        data-target=".add-user" type="submit" class="btnE">
+                        <i class="fa fa-pencil"></i>
                     </button>
                 </td>
-                <td>
+                <td style="width:2%">
                     <form action="{{../deleteUrl}}{{valFromObjkey row ../idDelete}}" method="POST">
                         <input type="hidden" name="_method" value="DELETE">
-                        <button type="submit" class="badge bg-danger">
-                            <i class="fa fa-close"></i>
+                        <button type="submit" class="btnD">
+                            <i class="fa fa-trash"></i>
                         </button>
                     </form>
                 </td>
